# wine-tokenization-cip68-updates-service

./: -  .envrc  .gitignore  .justfile  CHANGELOG.md  DESCRIPTION.md  Dockerfile  README.md  cabal.project  component_diagram.puml  config_admin.json  config_atlas.json  payment.skey  payment.vkey  start.sh  swagger-api.json  talled Docker from the Snap store  wine-project.cabal  wine_contract_blueprint.json  wine_validator.plutus
audit/: contract_audit.md
docs/: hydra_integration.md
src/: Parameters.hs  Prelude.hs
src/Admin/: Main.hs
src/Bruno/Wine Tokenization Service/: Burn a reference wine NFT.bru  Burn a user-owned wine NFT.bru  Mint a new batch NFT.bru  Mint a new bottle NFT.bru  Retrieve wine NFT details.bru  Update an existing batch NFT.bru  Update an existing bottle NFT.bru  bruno.json  collection.bru
src/Offchain/: Context.hs  HydraOperation.hs  Interactions.hs  OffchainUtils.hs  Operations.hs  Transactions.hs  Validators.hs
src/Onchain/: Blueprint.hs  HydraType.hs  OnchainUtils.hs  Types.hs  WineValidator.hs
src/Server/: IPFS.hs  Main.hs  Pinata.hs  RestAPI.hs
src/Tests/: Main.hs  TestRunners.hs  UnitTests.hs
test/: TestHydraOperation.hs  test-hydra.cabal  test-pinata.hs
