cabal-version:   3.0
name:            wine-project
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options:        -Wall
  default-language:   GHC2021
  build-depends:      base >=4.18.2.0 && <5
  mixins:             base hiding (Prelude)
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedStrings
    RecordWildCards

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  default-language:   Haskell2010

  -- all Plinth modules should use the following GHC flags
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields

  -- 
  ghc-options:        -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options:        -fplugin-opt PlutusTx.Plugin:target-version=1.1.0

  -- Compiler flags (defaults)
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-remove-trace
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-optimize
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          options, plinth-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Offchain.Context
    Offchain.Interactions
    Offchain.OffchainUtils
    Offchain.Operations
    Offchain.Transactions
    Offchain.Validators
    Onchain.Blueprint
    Onchain.OnchainUtils
    Onchain.Types
    Onchain.WineValidator
    Parameters
    Prelude

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  build-depends:
    , aeson
    , bytestring
    , containers
    , extra
    , swagger2
    , text
    , mtl

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

test-suite wine-project-tests
  import:         plinth-ghc-options
  main-is:        Main.hs
  hs-source-dirs: src/Tests
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    TestRunners
    UnitTests

  build-depends:  wine-project
  build-depends:
    , extra
    , mtl
    , tasty
    , tasty-quickcheck

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , clb
    , plutus-ledger-api
    , plutus-tx

executable server
  import:         options
  main-is:        Main.hs
  hs-source-dirs: src/Server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    IPFS
    RestAPI

  build-depends:  wine-project
  build-depends:
    , aeson
    , aeson-pretty
    , bytestring                   ^>=0.11.5
    , data-has
    , extra
    , http-types                   ^>=0.12.4
    , ipfs
    , lens                         ^>=5.2.3
    , lzma                         ^>=0.0.1.1
    , mtl
    , rio
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , servant-swagger-ui-core
    , servant-swagger-ui-jensoleg
    , servant-swagger-ui-redoc
    , swagger2                     ^>=2.8.9
    , text
    , wai
    , wai-cors
    , warp

  --- Cardano specific dependencies
  build-depends:  atlas-cardano

-- , utf8-string
-- , http-types       ^>=0.12.4

-- , transformers     ^>=0.6.1
-- , wai-websockets
-- , websockets
-- , servant-conduit
-- , conduit
-- , servant-event-stream


executable admin
  import:         options
  main-is:        Main.hs
  hs-source-dirs: src/Admin
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
  build-depends:  wine-project
  build-depends:
    , aeson
    , bytestring  ^>=0.11.5
    , haskeline
    , mtl

  --- Cardano specific dependencies
  build-depends:  atlas-cardano
