cabal-version:      2.4
name:               test-hydra
version:            0.1.0.0
synopsis:           Test script for Hydra operations
description:        A test script to verify Hydra operations functionality
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
category:           Testing
build-type:         Simple

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors
    -fplugin-opt PlutusTx.Plugin:target-version=1.1.0
    -fplugin-opt PlutusTx.Plugin:no-remove-trace
    -fplugin-opt PlutusTx.Plugin:no-optimize

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

executable test-hydra
  import:           plinth-ghc-options
  main-is:          TestHydraOperation.hs
  hs-source-dirs:   ., ../src
  other-modules:    Offchain.HydraOperation
                    Onchain.HydraType
                    Prelude
  build-depends:
    base >=4.18.2.0 && <5,
    aeson,
    text,
    http-conduit,
    bytestring,
    process,
    scientific,
    swagger2,
    wine-project,
    extra,
    plutus-tx,
    plutus-ledger-api,
    plutus-core,
    atlas-cardano,
    unordered-containers,
    http-client,
    http-client-tls
  mixins:           base hiding (Prelude)
  default-language: Haskell2010
